# wordle

./: .gitignore  README.md  pyproject.toml
scripts/: benchmark.py  get_wordle_words.py  helper.py  interactive.py
wordle/: constants.py  game.py  player.py
